# rii

./: .gitignore  .gitmodules  .travis.yml  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  build.yml.orig  publish.yml  test.yml
docs/: Makefile  conf.py  index.rst  requirements.txt
docs/source/: api.rst  changelog.rst  tips.rst  tutorial.rst
examples/benchmark/: README.md  ann_methods.py  download_sift1b.sh  download_sift1m.sh  run_sift1b.py  run_sift1m.py  util.py
examples/tag_search/: simple_tag_search.ipynb
rii/: __init__.py  rii.py
src/: distance.h  main.cpp  pqkmeans.cpp  rii.h
tests/: context.py  test_rii.py
